Fix split tool not working properly